--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
   </div>
 
 <script>
-  const apiKey = "924215d9db4650f6e8d3ae2e0bc10fa1";
+  const apiKey = " "; //URL Key'ini buraya yaz
   
   const citySelect = document.getElementById("citySelect");
   const showBtn = document.getElementById("showBtn");
